# calendai

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  EVALUATION.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  evaluation.md  tradeoffs.md
docs/demo/: README.md
docs/demo/video/: calendai-demo.webm
evals/scenarios/: 01_create_simple.yaml  02_list_today.yaml  03_update_time_confirmed.yaml  04_delete_confirmed.yaml  05_delete_requires_confirmation.yaml  06_nl_time_next_friday.yaml  07_nl_time_afternoon.yaml  08_rule_blocks_early.yaml  09_rule_taught_then_enforced.yaml  10_contact_recall.yaml  11_preference_default_duration.yaml  12_availability_multiuser.yaml  13_invite_attendee.yaml  14_error_retry_succeeds.yaml  15_error_surfaces_gracefully.yaml  16_conflict_warning.yaml  17_ambiguity_clarify.yaml  18_timezone_cross.yaml  19_multiuser_isolation.yaml  20_update_unconfirmed_no_change.yaml
scripts/: demo_capture.py
src/calendai/: __init__.py  cli.py
src/calendai/agent/: loop.py  prompts.py  tools.py
src/calendai/auth/: google_oauth.py  tokens.py
src/calendai/core/: clock.py  config.py  models.py  provider.py
src/calendai/db/: schema.sql  store.py
src/calendai/evals/: __init__.py  cli.py  report.py  results.py  runner.py  schema.py  scorers.py
src/calendai/memory/: __init__.py  enforcement.py  episodic.py  profile.py  validation.py
src/calendai/providers/: fake.py  google.py
src/calendai/traces/: emitter.py
src/calendai/web/: __init__.py  __main__.py  app.py  runtime.py
src/calendai/web/static/: index.html
tests/: conftest.py  scripted_client.py  test_agent_loop.py  test_agent_tools.py  test_clock.py  test_evals.py  test_fake_provider.py  test_google_oauth.py  test_google_provider.py  test_memory.py  test_models.py  test_prompts.py  test_store.py  test_traces.py  test_web.py
