[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "calendai"
version = "0.1.0"
description = "CalendAI — an intelligent, memory-driven calendar agent"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "cryptography>=42",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "respx>=0.21",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"calendai.db" = ["*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not live' -q"
markers = [
    "live: hits real external APIs (excluded by default and in CI)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
