[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "calendai"
version = "0.1.0"
description = "CalendAI — an intelligent, memory-driven calendar agent"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "cryptography>=42",
    "pyyaml>=6.0",
    "tzdata>=2024.1",  # Windows ships no IANA tz database; ZoneInfo needs this
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "respx>=0.21",
    "pre-commit>=3.7",
]
# Only needed to (re)capture the demo in docs/demo/ via scripts/demo_capture.py;
# not required to run, test, or evaluate CalendAI.
demo = [
    "playwright>=1.48",
    "imageio-ffmpeg>=0.5",  # full ffmpeg (H.264) for the .webm -> .mp4 conversion
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"calendai.db" = ["*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not live' -q"
markers = [
    "live: hits real external APIs (excluded by default and in CI)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's dependency-injection idiom puts Depends(...) in argument defaults.
"src/calendai/web/app.py" = ["B008"]
